# socketto

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
socketto/: __init__.py  routes.py  services.py
tests/: test_services.py  test_simple.py
