[tool.poetry]
name = "socketto"
version = "0.0.1"
description = "simple version of documents editing"
authors = ["Andrey Romanov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.0.1"
gevent = "^21.1.2"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
